# primer-paso

./: .env.example  .env.test  .gitignore  .repomixignore  README.md  SECURITY.md  biome.jsonc  justfile  mise.toml  netlify.org-portal.toml  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  repomix.config.json  svelte.config.js  vite.config.ts
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pdf-signer.yml
.repomix/config/: org-portal.include  public.include  research.include
apps/org-portal/: netlify.toml  package.json  svelte.config.js
apps/public/: netlify.toml  package.json  svelte.config.js  vite.config.ts
apps/research/: .prettierignore  .prettierrc.mjs  README.md  astro.config.mjs  netlify.toml  package.json
docs/: README.md  deployment-certificate-pilot.md  deployment-supabase-postgres.md  design-spec.md  journey-future.md  local-supabase.md  policy-context.md  supabase-org-auth.md
scripts/: add-org-signing-certificate.ts  check-db-runtime.mjs  check-matomo-env.mjs  check-org-portal-env.mjs  generate-provinces.mjs  generate-test-signing-fixture.sh  smoke-certificate-pilot.mjs  test-pdf-signing-service.mjs
services/pdf-signer/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  uv.toml
services/pdf-signer/.github/workflows/: ci.yml
services/pdf-signer/src/pdf_signer/: __main__.py  app.py  main.py  models.py  signing.py
services/pdf-signer/tests/: test_smoke.py
src/: app.css  hooks.server.ts
src/lib/: index.ts  (+1 more)
supabase/: config.toml  seed.sql
(+280 files in other folders)
